--- a/config.json
+++ b/config.json
@@ -2,9 +2,11 @@
   "isCopy": true,
   "isOverwrite": true,
   "resFolderSource": "/Users/phamkhoa/GST/myFPT/LatestDevelop/16-2/2XApp_Android/app/src/main/res",
-  "resFolderDestination": "/Users/phamkhoa/GST/myFPT/LatestDevelop/16-2/2XApp_Android/base/src/main/res",
+  "resFolderDestination": "/Users/phamkhoa/GST/myFPT/LatestDevelop/16-2/2XApp_Android/features/events/src/main/res",
   "listFileName": [
-    "file_name"
-
+  ],
+  "listColorName": [
+  ],
+  "listStringName": [
   ]
 }
